--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
     <script>
         // --- Initialize Supabase ---
         // TODO: Replace with your project's URL and Anon Key
-        const SUPABASE_URL = 'YOUR_SUPABASE_URL';
-        const SUPABASE_ANON_KEY = 'YOUR_SUPABASE_ANON_KEY';
+        const SUPABASE_URL = 'https://mrowwjmahjpejunhmvrs.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1yb3d3am1haGpwZWp1bmhtdnJzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE4NDUwMzYsImV4cCI6MjA3NzQyMTAzNn0.5-lmxomtOaYxaV0dfch--HSYEo0Z79yDxgdF7IdCgvw';
         
         const { createClient } = supabase;
         const supabaseClient = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
