Simplify signup success message

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 signupError.textContent = error.message;
             } else {
                 // This message appears if email confirmation is ON in your project
-                signupError.textContent = "Sign up successful! Please check your email to verify.";
+                signupError.textContent = "Sign up successful!";
                 document.getElementById('signup-email').value = "";
                 document.getElementById('signup-password').value = "";
             }
