Remove emoji from notes header
Removed emoji from the notes header.

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
     <div id="notes-container" class="container">
         <div id="notes-header">
-            <h1>My Notes ⚡️</h1>
+            <h1>My Notes</h1>
             <button id="logout-button">Logout</button>
         </div>
         <textarea id="note-input" placeholder="Write your new note here..."></textarea>
